--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,8 @@
 .pd2 {display: flex}
 .pd2:hover {cursor: pointer}
 .n a:not(.n>a) {align-content: center;display: flex;font-weight: 600;height: 50px}
-.lb {display: flex;align-items: center;font-size: 16px;font-weight: 500}
-.prp {display: flex;align-self: center;font-size: 16px;font-weight: 500}
+.lb {display: flex;align-items: center;font-size: 16px;font-weight: 500;color: var(--d)}
+.prp {display: flex;align-self: center;font-size: 16px;font-weight: 500;color: var(--d);}
 button:hover {cursor: pointer}
 button {align-content: center;background: #ffffff76;border: 1px solid #33333321;border-radius: 6px;box-shadow: -2px 2px 4px #33333399;min-height: 45px;padding: 6px}
 #sb-btn {margin-inline:24px 22px;min-height: 43px;padding-block-end:1px}
@@ -96,11 +96,7 @@ article p {color: var(--ad);line-height: 1.3;margin-block-end:4px}
         transition: var(--anim)
     }
 
-    .ftd,.lb,.ld,.n a,.prp,.sb li,.sm {
-        color: var(--l);
-        transition: var(--anim2)
-    }
-
+    .ftd,.lb,.ld,.n a,.prp,.sb li,.sm {color: var(--l);transition: var(--anim2)}
     button {background: #0000002a;border: 1px solid #dedede39;box-shadow: -2px 2px 4px #d1d1d133}
     a:focus-visible, button:focus-visible {
         outline:2px solid var(--dg);
@@ -153,24 +149,10 @@ article p {color: var(--ad);line-height: 1.3;margin-block-end:4px}
         transition: var(--anim)
     }
 
-    .pa {
-        color: var(--al)
-    }
-
-    .at {
-        background-color: #0f0f0f;
-        border: 1px solid hsla(0,0%,95%,.174);
-        box-shadow: -5px 6px 8px hsla(0,0%,95%,.098);
-        transition: var(--anim)
-    }
-
-    .aa {
-        color: var(--dg)
-    }
-
-    article p {
-        color: var(--al)
-    }
+    .pa {color: var(--al)}
+    .at {background-color: #0f0f0f;border: 1px solid hsla(0,0%,95%,.174);box-shadow: -5px 6px 8px hsla(0,0%,95%,.098);transition: var(--anim)}
+    .aa {color: var(--dg)}
+    article p {color: var(--al)}
 }
 
 @media screen and (max-width: 948px) {.na2 {display:none} .li2 {display: list-item}}
